# sccd

./: CMakeLists.txt  README.md  broadphase.hpp  ccd_test.py  cell_broadphase.hpp  conversions.hpp  genmicrokernels.sh  narrowphase.hpp  narrowphase.py  npk_test.cpp  numeric_roots.py  numerr.py  plot.sh  plot_ccd.py  read_mma.py  read_queries.py  roots.hpp  roots.py  sbisect.py  sccd.cpp  sccd.hpp  sccd_base.hpp  sccd_py.py  smath.hpp  snumerr.hpp  snumtol.hpp  srootfinder.hpp  stuv.hpp  test.sh  tuv.py  vaabb.h  vaabb.hpp
csv/: armadillo-rollers_vf_table.csv
data/: read_queries.py  read_wxf.py
hacks/: CMakeLists.txt  README.md  conversions.hpp  test.sh  test_sccd_broad.cpp  test_sccd_narrow.cpp
python/: ccd2D.py  ccd3D.py  ccd_test.py  plot_ccd.py  read_queries.py  read_wxf.py  root_ee.py  sccd_py.py  swept_axis_intersection.py  tuv.py
scripts/: genmicrokernels.sh  plot.sh  test.sh
src/: broadphase.hpp  broadphase_lb.hpp  cell_broadphase.hpp  narrowphase.hpp  npk_test.cpp  sccd.cpp  sccd.hpp  sccd_base.hpp  sccd_config.hpp.in  snumtol.hpp  sparallel.hpp  srootfinder.hpp  stuv.hpp
